--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,9 @@
   font-style: normal;
   font-variation-settings:
     "wdth" 100;}
+    body{
+        background-color: aliceblue;
+    }
 
 nav{
     display: flex;
@@ -43,4 +46,34 @@ ul{
 .sec-greeting{
     font-weight: normal;
     font-size: larger;
+}
+.intro{
+    display: flex;
+    justify-content: space-between;
+    padding-left: 150px;
+    padding-right: 100px;
+   background-image: url(../images/header_bg.png),url(../images/developer.png);
+   background-position: bottom right,top left;
+   background-repeat: no-repeat;
+   background-color: beige;
+}
+
+.info-container{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    border: 2px solid #474747;
+    background-color: bisque;
+    margin: 0 300px;
+    text-align: center;
+}
+.about{
+    
+}
+main{
+    background-color: beige;
+}
+.about{
+     text-align: center;
+     padding: 0 300px;
 }
